desktop/core/src/desktop/static/desktop/css/responsive.css
/* ... */
.top-nav-right {
  -ms-flex: 0 0 300px;
  flex: 0 0 300px;
}

.top-nav-right .compose-action {
  float: right;
  margin-right: 15px;
}

.top-nav-right .dropdown-menu {
  margin-left: -80px;
}

.jobs-panel {
  position: fixed;
  z-index: 999999;
  top: 45px;
  padding: 10px;
  height: 300px;
  width: 400px;
  right: 10px;
  font-size: 13px;
  border-radius: 2px;
  background-color: #FFF;
  -webkit-box-shadow: 0 2px 8px rgba(0, 0, 0, .18);
  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.18), 0 2px 8px 0 rgba(0, 0, 0, 0.13);
}

.compose-action {
  float: right;
  margin-top: 10px;
  z-index: 999999;
  line-height: 20px;
  border-radius: 4px;
}

.compose-action:hover .btn {
  background-color: rgba(240, 240, 240, 0.6);
}

.compose-action .btn {
  color: #f9f9f9;
  border: 1px solid transparent;
  background-color: transparent;
  background-image: none;
  font-weight: 600;
  font-size: 14px;

  -webkit-transition-duration: 0.2s;
  -mos-transition-duration: 0.2s;
  -ms-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-property: background-color, color;
  -moz-transition-property: background-color, color;
  -ms-transition-property: background-color, color;
  transition-property: background-color, color;
}

.compose-action .btn:hover {
  background-color: rgba(240, 240, 240, 0.92);
  color: #338BB8;
}

.jobs-badge {
  color: #338BB8;
  background-color: #f9f9f9;
  float: right;
  margin-left: 4px;
  padding: 1px 5px;
  border-radius: 10px;
  font-size: 12px;

  -webkit-transition-duration: 0.2s;
  -mos-transition-duration: 0.2s;
  -ms-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-property: background-color, color;
  -moz-transition-property: background-color, color;
  -ms-transition-property: background-color, color;
  transition-property: background-color, color;
}

.compose-action .btn:hover .jobs-badge {
  background-color: #338BB8;
  color: rgba(240, 240, 240, 0.92);
}

.compose-action .btn:first-child:active,
.compose-action .btn:first-child {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  padding-bottom: 2px;
  box-shadow: none;
}

.compose-action .btn:last-of-type:not(:first-child) {
  padding-left: 1px;
}

.compose-action .btn:last-of-type {
  margin-left: 0;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  box-shadow: none;
}

.compose-action .dropdown-menu img {
  height: 18px;
  width: 18px;
  margin: -1px 5px 0 -10px;
}

.compose-action .dropdown-menu i {
  color: #338BB8;
  height: 18px;
  width: 18px;
  font-size: 14px;
  margin: -1px 2px 0 -7px;
}

.compose-action .dropdown-menu li {
  height: 32px;
}

.compose-action .dropdown-menu li a {
  line-height: 32px;
}

.compose-action .dropdown-submenu>a:after {
  margin-top: 11px;
}

.compose-action .dropdown-menu li.divider {
  height: 1px;
  margin: 5px 0;
}

.compose-action.open .dropdown-toggle:not(:hover) {
  background-color: transparent !important;
}

.dropdown-no-icon {
  margin-left: 17px;
}

.top-nav-middle .search-container {
  margin-left: auto;
  margin-right: auto;
  max-width: 600px;
}

.search-container {
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -ms-flex: 1 1 29px;
  flex: 1 1 29px;
  padding: 10px;
}

.search-container > input {
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
  border: 1px solid #DDD;
  border-right: none;
  flex: 1 1 100%;
  height: 27px;
  box-shadow: none;
}

.search-container > a {
  cursor: pointer;
  flex: 0 0 31px;
  border-bottom-right-radius: 4px;
  border-top-right-radius: 4px;
  border: 1px solid #DDD;
  box-shadow: none;
  font-size: 15px;
  line-height: 29px;
  background-color: #f9f9f9;
  width: 31px;
  height: 29px;
}

.search-container > a > i {
  margin-left: 8px;
}

.left-panel,
.right-panel {
  -ms-flex: 0;
  flex: 0;
  position: relative;
  background-color: #FFF;
  min-width: 250px;
}

.side-panel-closed {
  min-width: 0;
}

.resizer {
  -ms-flex: 0;
  flex: 0;
  height: 100%;
  min-width: 4px;
  cursor: col-resize;
}

.resize-bar {
  position: absolute;
  height: 100%;
  width: 2px;
  background-color: #F1F1F1;
}

.page-content {
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.page-content .content-panel {
  overflow-y: auto;
  overflow-x: hidden;
}

.left-nav {
  position:absolute;
  background-color: #338BB8;
  color: #f9f9f9;
  z-index: 1048;
  top: 0;
  left: 0;
  bottom: 0;
  width: 0;
  overflow-x: hidden;
  white-space: nowrap;
  -webkit-transition: 0.2s width;
  -moz-transition: 0.2s width;
  -ms-transition: 0.2s width;
  transition: 0.2s width;
}

.left-nav-menu {
  padding-bottom: 60px;
  margin: 10px 0 0 0;
}

.left-nav-menu li.header {
  text-transform: uppercase;
  letter-spacing: 1px;
}

.left-nav-menu li {
  padding-left: 15px;
  list-style: none;
  line-height: 33px;
  height: 33px;
}

.left-nav-menu li:not(.header) {
  background-color: transparent;
  -webkit-transition: 0.4s background-color;
  -moz-transition: 0.4s background-color;
  -ms-transition: 0.4s background-color;
  transition: 0.4s background-color;
  cursor: pointer;
}

.left-nav-menu li:not(.header):hover {
  background-color: rgba(240, 240, 240, 0.9);
}

.left-nav-menu li a {
  font-size: 14px;
  letter-spacing: 1px;
  color: #f9f9f9;
  -webkit-transition: 0.4s color;
  -moz-transition: 0.4s color;
  -ms-transition: 0.4s color;
  transition: 0.4s color;
}

.left-nav-menu li:not(.header):hover a {
  color: #003F6C;
}

.left-nav-menu li a:hover {
  text-decoration: none;
}

.left-nav-visible {
  width: 200px;
  -webkit-box-shadow: 0 2px 8px rgba(0,0,0,.18);
  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.18), 0 2px 8px 0 rgba(0, 0, 0, 0.13);
}

.left-nav-drop {
  border-top: 1px solid rgba(240, 240, 240, 0.9);
  position: absolute;
  bottom: 0;
  left: 0;
  font-size: 16px;
  background-color: #338BB8;
  width: 0;
}

.left-nav-drop div {
  margin: 15px 30px;
}
/* ... */

